--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<input type="number" id="day" placeholder="Giorno">
 		<button type="button" onclick="convertToJulianDate()">Converti la data in Giorni Giuliani</button>
 		<p>Giorno Giuliano: <span id="julianDate"></span></p>
-		<button type="button" onclick="calculateDifference()">Calcola numero giorno</button>
+		<button type="button" onclick="calculateDifference()+1">Calcola numero giorno</button>
 	</form>
 	<p>Giorno numero: <span id="difference"></span></p>
 	
