--- a/index.html
+++ b/index.html
@@ -1,85 +1,48 @@
-
 <html>
 <head>
-	<title>Tic Tac Toe</title>
-	<style>
-		.container {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-		button {
-			width: 80px;
-			height: 80px;
-			font-size: 40px;
-			margin: 5px;
-		}
-	</style>
-</head>
-<body>
-	<div class="container">
-		<div>
-			<button id="0" onclick="play(this)">-</button>
-			<button id="1" onclick="play(this)">-</button>
-			<button id="2" onclick="play(this)">-</button>
-		</div>
-		<div>
-			<button id="3" onclick="play(this)">-</button>
-			<button id="4" onclick="play(this)">-</button>
-			<button id="5" onclick="play(this)">-</button>
-		</div>
-		<div>
-			<button id="6" onclick="play(this)">-</button>
-			<button id="7" onclick="play(this)">-</button>
-			<button id="8" onclick="play(this)">-</button>
-		</div>
-	</div>
-	<script>
-		let currentPlayer = "X";
-		let gameOver = false;
-
-		function play(button) {
-			if (!gameOver && button.innerText == "-") {
-				button.innerText = currentPlayer;
-				if (checkWin()) {
-					alert(currentPlayer + " wins!");
-					gameOver = true;
-				} else if (checkTie()) {
-					alert("Tie game!");
-					gameOver = true;
-				} else {
-					currentPlayer = currentPlayer == "X" ? "O" : "X";
-				}
-			}
+	<title>Convert date to Julian date and calculate difference</title>
+	<script type="text/javascript">
+		function toJulianDate(year, month, day) {
+			var a = Math.floor((14 - month) / 12);
+			var y = year + 4800 - a;
+			var m = month + 12 * a - 3;
+			var julianDay = day + Math.floor((153 * m + 2) / 5) + y * 365 + Math.floor(y / 4) - Math.floor(y / 100) + Math.floor(y / 400) - 32045;
+			return julianDay;
 		}
 
-		function checkWin() {
-			let cells = document.querySelectorAll("button");
-			let winConditions = [
-				[0, 1, 2], [3, 4, 5], [6, 7, 8], // rows
-				[0, 3, 6], [1, 4, 7], [2, 5, 8], // columns
-				[0, 4, 8], [2, 4, 6] // diagonals
-			];
-			for (let condition of winConditions) {
-				if (cells[condition[0]].innerText != "-" &&
-					cells[condition[0]].innerText == cells[condition[1]].innerText &&
-					cells[condition[1]].innerText == cells[condition[2]].innerText) {
-					return true;
-				}
-			}
-			return false;
+		function calculateDifference() {
+			var year = parseInt(document.getElementById("year").value);
+			var month = parseInt(document.getElementById("month").value);
+			var day = parseInt(document.getElementById("day").value);
+			var julianDate = toJulianDate(year, month, day);
+			var firstDayOfYear = toJulianDate(year, 1, 1);
+			var difference = Math.abs(julianDate - firstDayOfYear);
+			document.getElementById("difference").innerHTML = difference;
 		}
 
-		function checkTie() {
-			let cells = document.querySelectorAll("button");
-			for (let cell of cells) {
-				if (cell.innerText == "-") {
-					return false;
-				}
-			}
-			return true;
+		function convertToJulianDate() {
+			var year = parseInt(document.getElementById("year").value);
+			var month = parseInt(document.getElementById("month").value);
+			var day = parseInt(document.getElementById("day").value);
+			var julianDate = toJulianDate(year, month, day);
+			document.getElementById("julianDate").innerHTML = julianDate;
 		}
 	</script>
+</head>
+<body>
+	<h1>Convertire in Giorni Giuliani</h1>
+	<p>Inserire una data:</p>
+	<form>
+		<input type="number" id="year" placeholder="Anno">
+		<input type="number" id="month" placeholder="Mese">
+		<input type="number" id="day" placeholder="Giorno">
+		<button type="button" onclick="convertToJulianDate()">Converti la data in Giorni Giuliani</button>
+		<p>Giorno Giuliano: <span id="julianDate"></span></p>
+		<button type="button" onclick="calculateDifference()">Calcola numero giorno</button>
+	</form>
+	<p>Giorno numero: <span id="difference"></span></p>
+	
+	<img src = "https://www.pngmart.com/files/4/Clown-PNG-Free-Download.png">
 </body>
 </html>
 
